[project]
name = "compyter"
description = "Jupyter inside ComfyUI: persistent IPython kernel, in-node notebook cell, and pro external-attach breakpoint."
version = "0.1.2"
license = {file = "LICENSE"}
dependencies = ["ipykernel", "jupyter_client"]

[project.urls]
Repository = "https://github.com/sxela/ComPyter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sxela"
DisplayName = "ComPyter"
Icon = ""
